src/test/ui/parser/mod_file_not_exist_windows.stderr
error[E0583]: file not found for module `not_a_real_file`
  --> $DIR/mod_file_not_exist_windows.rs:3:5
   |
LL | mod not_a_real_file;
   |     ^^^^^^^^^^^^^^^
   |
   = help: name the file either not_a_real_file.rs or not_a_real_file/mod.rs inside the directory "$DIR"

error: aborting due to previous error

For more information about this error, try `rustc --explain E0583`.
